hphp/test/zend/good/ext/spl/tests/bug44144.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("spl")) print "skip";
}
