hphp/test/zend/bad/ext/standard/tests/file/mkdir-005.php.skipif
<?php
chdir("/");
if (!@mkdir("testtmpskipifdir")) {
	die("skip for root only");
}
rmdir("testtmpskipifdir");
?>